# LunaHook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_cht.md  README_en.md  README_ru.md  README_zh.md  build.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 01_game_request.yaml  04_game_request.yaml  04_question.yaml  config.yml
.github/workflows/: release.yml
Lang/: Lang.h  cht.h  en.h  ru.h  zh.h
LunaHook/: CMakeLists.txt  NoEngine.h  embed_util.cc  embed_util.h  engine.h  enginecollection32.cpp  enginecollection64.cpp  enginecontrol.cpp  hijackfuns.cc  hijackfuns.h  hookfinder.cc  hookfinder.h  main.cc  main.h  pchhook.h  resource.rc  stackoffset.hpp  texthook.cc  veh_hook.cpp  veh_hook.h
LunaHook/engine32/: 5pb.cpp  5pb.h  A98SYS.cpp  A98SYS.h  AB2Try.cpp  AB2Try.h  ACTGS.cpp  ACTGS.h  AGE_System.cpp  AGE_System.h  AGS.cpp  AGS.h  AIL2.cpp  AIL2.h  AOS.cpp  AOS.h  AXL.cpp  AXL.h  Abalone.cpp  Abalone.h  Abel.cpp  Abel.h  AdobeAir.cpp  AdobeAir.h  AdobeFlash10.cpp  AdobeFlash10.h  Ages3ResT.cpp  Ages3ResT.h  Aksys.cpp  Aksys.h  AksysGames.cpp  AksysGames.h  Alice.cpp  Alice.h  Anex86.cpp  Anex86.h  Anim.cpp  Anim.h  Anisetta.cpp  Anisetta.h  (+254 more)
LunaHook/engine64/: 5pb.cpp  5pb.h  AGES7.cpp  AGES7.h  Artemis.cpp  Artemis.h  CMVS.cpp  ENTERGRAM.cpp  ENTERGRAM.h  Godot.cpp  Godot.h  IG.cpp  IG.h  Kincaid.cpp  Kincaid.h  KiriKiri.cpp  KiriKiri.h  LightVN.cpp  LightVN.h  PPSSPP.cpp  PPSSPP.h  Renpy.cpp  Renpy.h  Ryujinx.cpp  Suika2.cpp  Suika2.h  TYPEMOON.cpp  TYPEMOON.h  UnrealEngine.cpp  V8.cpp  V8.h  YOX.cpp  YOX.h  livecaptions.cpp  livecaptions.h  lucasystem.cpp  lucasystem.h  mono.cpp  mono.h  pchooks.cpp  (+7 more)
LunaHook/engines/: CMakeLists.txt  emujitarg.hpp
LunaHook/engines/lua/: lua51.cpp
LunaHook/engines/mages/: mages.cpp  mages.h  mages.hpp
LunaHook/engines/mono/: def_il2cpp.hpp  def_mono.hpp  il2cpp.hpp  impl_il2cpp.cpp  impl_mono.cpp  monocommon.hpp  monofuncinfo.h  monoil2cpp.cpp  monoil2cpp.h  monoil2cpp.hpp  monoobject.h
LunaHook/engines/pchooks/: pchooks.cpp
LunaHook/engines/ppsspp/: funcinfo.h  ppsspp.cpp  psputils.hpp  specialgames.hpp
LunaHook/engines/python/: python.cpp  python.h  python2.cpp  python3.cpp
LunaHook/engines/v8/: httpserver.cpp  v8.cpp  v8.h
LunaHook/resource/: charset_Famicom_Tantei_Club.txt  charset_Robotics_Notes_Dash.txt  charset_Robotics_Notes_Elite.txt  charset_SINce_Memories.txt  charset_default.txt  lunajspatch.js  renpy_hook_font.py  renpy_hook_text.py
LunaHook/util/: CMakeLists.txt  stringfilters.cpp  stringfilters.h  textunion.h  util.cc  util.h
LunaHook/util/ithsys/: ithsys.cc
LunaHook/util/memdbg/: memsearch.cc  memsearch.h
LunaHost/: CMakeLists.txt  LunaHostCLI.cpp  LunaHostDll.cpp  host.cpp  host.h  textthread.cpp  textthread.h
LunaHost/GUI/: CMakeLists.txt  LunaHost.cpp  LunaHost.h  QtLoader.cpp  QtLoader_inline.cpp  confighelper.cpp  confighelper.h  controls.cpp  controls.h  http.hpp  lockedqueue.hpp  main.cpp  pluginexample.cpp  pluginmanager.cpp  pluginmanager.h  processlistwindow.cpp  processlistwindow.h  window.cpp  window.h
LunaHost/GUI/Plugin/: CMakeLists.txt  QtLoader.cpp  QtUtils.cmake  copyclipboard.cpp  plugindef.h  pluginexample.cpp
LunaHost/GUI/Plugin/extensions/: CMakeLists.txt  extpch.h  extrawindow.cpp  qtcommon.h  regexfilter.cpp
include/: CMakeLists.txt  common.h  const.h  defs.h  hookcode.cpp  pch.h  stringutils.cpp  stringutils.h  texthook.h  types.h  utils.h  winevent.hpp
libs/: libs.cmake
libs/minhook/: CMakeLists.txt
libs/minhook/src/: buffer.c
libs/nlohmann/: json.hpp
scripts/: build32.bat  build3264en.bat  build32xp.bat  build32xp_local.bat  build64.bat  builden.bat  buildplugin32.bat  buildplugin64.bat  buildxpen.bat  buildxpzh.bat  buildzh.bat  pack.py
version/: libpjproject.pc.in
